--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,34 @@
 results:
   -
+    provision_time: 1m 6s
+    image_size: 1724 Mb
+    resin_os_version: 2.19.0+rev1.prod
     body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Device reported hostOS version
+       - ✔ Resin host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
+       - ✔ Image filename format
+       - ✔ Push a mono-container to the application
+       - ✔ Push a multi-container application
+       - ✔ Update supervisor through the API
+       - ✖ Reload supervisor on a running device
+       - ✔ Update device status with resin-device-progress
+
+
+      # Summary
+      - planned: 9
+      - pass: 8
+      - fail: 1
+
+      # Fails
+      ## Reload supervisor on a running device
+          ✖ Reload supervisor on a running device
+          undefined
+    author: null
+    timestamp: '2018-10-11'
+    PS_UUID: d51d2c80-cd8a-11e8-a731-cb2ec1a6542f
+  - body: |-
       # Tests 
 
 
