--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: '2018-10-11'
+    PS_UUID: 44805bb0-cda9-11e8-b0af-85435fc706f8
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: '2018-10-11'
     PS_UUID: c3d35ab0-cda0-11e8-b240-35990cfda85a
   - provision_time: 1m 0s
     image_size: 1724 Mb
