--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: '2018-10-11'
+    PS_UUID: 873cbbd0-cdb1-11e8-b71e-49dfb0bbf05a
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: '2018-10-11'
     PS_UUID: 44805bb0-cda9-11e8-b0af-85435fc706f8
   - body: |-
       # Tests 
