--- a/results.yaml
+++ b/results.yaml
@@ -10,6 +10,18 @@ results:
       - fail: 0
 
       # Fails
+    timestamp: '2018-10-12'
+    PS_UUID: 05cf1a30-cdba-11e8-a2bc-19f37d1a75b2
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
     timestamp: '2018-10-11'
     PS_UUID: 873cbbd0-cdb1-11e8-b71e-49dfb0bbf05a
   - body: |-
