--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: '2018-10-12'
+    PS_UUID: 65871060-cdc2-11e8-9076-8f7040164e5c
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: '2018-10-12'
     PS_UUID: 05cf1a30-cdba-11e8-a2bc-19f37d1a75b2
   - body: |-
       # Tests 
