--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    provision_time: 1m 4s
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: '2018-10-12'
+    PS_UUID: 0e6fed90-cdd3-11e8-9554-e9344fa8c29a
+  - provision_time: 1m 4s
     image_size: 1724 Mb
     resin_os_version: 2.19.0+rev1.prod
     body: |-
