--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    provision_time: 1m 5s
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: '2018-10-12'
+    PS_UUID: d21211f0-cde3-11e8-8a95-63d3e7cfe285
+  - provision_time: 1m 5s
     image_size: 1724 Mb
     resin_os_version: 2.19.0+rev1.prod
     body: |-
