--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    provision_time: 1m 0s
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: '2018-10-12'
+    PS_UUID: 0ec98d30-cdfd-11e8-98a6-8b6a5ab55248
+  - provision_time: 1m 0s
     image_size: 1724 Mb
     resin_os_version: 2.19.0+rev1.prod
     body: |-
