--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    provision_time: 0m 56s
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: '2018-10-12'
+    PS_UUID: 215597a0-ce16-11e8-a9ea-350ac6d73545
+  - provision_time: 0m 56s
     image_size: 1724 Mb
     resin_os_version: 2.19.0+rev1.prod
     body: |-
