--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,48 @@
 results:
   -
-    provision_time: 1m 10s
+    provision_time: 1m 8s
+    image_size: 1724 Mb
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Device reported hostOS version
+       - ✔ Balena host OS update [2.21.0+rev1.prod -> 2.21.0+rev1.prod]
+       - ✔ Image filename format
+       - ✔ Push a mono-container to the application
+       - ✔ Push a multi-container application
+       - ✖ Update supervisor through the API
+       - ✔ Reload supervisor on a running device
+       - ✔ Update device status with resin-device-progress
+       - ✖ SSH error:
+
+
+      # Summary
+      - planned: 10
+      - pass: 8
+      - fail: 2
+
+      # Fails
+      ## Update supervisor through the API
+          ✖ Update supervisor through the API
+          undefined
+      ## SSH error:
+          ✖ SSH error:
+          {
+              "autoend": true,
+              "at": {
+                  "line": 83,
+                  "column": 16,
+                  "file": "lib/utils.js",
+                  "function": "ChildProcess.ssh.on"
+              },
+              "stack": "ChildProcess.ssh.on (lib/utils.js:83:16)\n",
+              "test": "TAP",
+              "source": "reject(new Error(`SSH error: ${stderr}`))\n"
+          }
+    author: null
+    timestamp: '2018-10-30'
+    PS_UUID: 1dbd5520-dc4d-11e8-a047-61d85d7f7688
+  - provision_time: 1m 10s
     image_size: 1724 Mb
     body: |-
       # Tests 
