--- a/results.yaml
+++ b/results.yaml
@@ -10,6 +10,30 @@ results:
        - ✔ Image filename format
        - ✔ Push a mono-container to the application
        - ✔ Push a multi-container application
+       - ✔ Update supervisor through the API
+       - ✔ Reload supervisor on a running device
+       - ✔ Update device status with resin-device-progress
+
+
+      # Summary
+      - planned: 9
+      - pass: 9
+      - fail: 0
+
+      # Fails
+    author: null
+    timestamp: '2018-10-30'
+    PS_UUID: eaa3fc30-dc50-11e8-8a93-db2857eca687
+  - provision_time: 1m 8s
+    image_size: 1724 Mb
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Device reported hostOS version
+       - ✔ Balena host OS update [2.21.0+rev1.prod -> 2.21.0+rev1.prod]
+       - ✔ Image filename format
+       - ✔ Push a mono-container to the application
+       - ✔ Push a multi-container application
        - ✖ Update supervisor through the API
        - ✔ Reload supervisor on a running device
        - ✔ Update device status with resin-device-progress
