--- a/results.yaml
+++ b/results.yaml
@@ -2,6 +2,31 @@ results:
   -
     provision_time: 1m 8s
     image_size: 1724 Mb
+    balena_os_version: 2.21.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Device reported hostOS version
+       - ✔ Balena host OS update [2.21.0+rev1.prod -> 2.21.0+rev1.prod]
+       - ✔ Image filename format
+       - ✔ Push a mono-container to the application
+       - ✔ Push a multi-container application
+       - ✔ Update supervisor through the API
+       - ✔ Reload supervisor on a running device
+       - ✔ Update device status with resin-device-progress
+
+
+      # Summary
+      - planned: 9
+      - pass: 9
+      - fail: 0
+
+      # Fails
+    author: null
+    timestamp: '2018-10-30'
+    PS_UUID: d8e67ba0-dc53-11e8-b0e8-11c4e9064fd0
+  - provision_time: 1m 8s
+    image_size: 1724 Mb
     body: |-
       # Tests 
        - ✔ Device is online
