--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,38 @@
 results:
   -
-    provision_time: 1m 8s
+    provision_time: 1m 7s
+    image_size: 1724 Mb
+    balena_os_version: 2.21.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Device reported hostOS version
+       - ✔ Balena host OS update [2.21.0+rev1.prod -> 2.21.0+rev1.prod]
+       - ✔ Image filename format
+       - ✔ Push a mono-container to the application
+       - ✖ Push a multi-container application
+       - ✔ Update supervisor through the API
+       - ✔ Reload supervisor on a running device
+       - ✔ Update device status with resin-device-progress
+       - ✖ Sync application container
+
+
+      # Summary
+      - planned: 10
+      - pass: 8
+      - fail: 2
+
+      # Fails
+      ## Push a multi-container application
+          ✖ Push a multi-container application
+          undefined
+      ## Sync application container
+          ✖ Sync application container
+          undefined
+    author: null
+    timestamp: '2018-10-30'
+    PS_UUID: 73f503b0-dc58-11e8-9196-4b6caa6204ff
+  - provision_time: 1m 8s
     image_size: 1724 Mb
     balena_os_version: 2.21.0+rev1.prod
     body: |-
