--- a/results.yaml
+++ b/results.yaml
@@ -5,6 +5,26 @@ results:
     balena_os_version: 2.21.0+rev1.prod
     body: |-
       # Tests 
+       - ✖ Enter running application container
+
+
+      # Summary
+      - planned: 1
+      - pass: 0
+      - fail: 1
+
+      # Fails
+      ## Enter running application container
+          ✖ Enter running application container
+          undefined
+    author: null
+    timestamp: '2018-10-30'
+    PS_UUID: 2ede49c0-dc59-11e8-a248-7ff5f5c12366
+  - provision_time: 1m 9s
+    image_size: 1724 Mb
+    balena_os_version: 2.21.0+rev1.prod
+    body: |-
+      # Tests 
        - ✔ Device is online
        - ✔ Device reported hostOS version
        - ✖ Balena host OS update [2.21.0+rev1.prod -> 2.21.0+rev1.prod]
