--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    provision_time: 1m 6s
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-11-1
+    PS_UUID: 50c934e0-dddb-11e8-bc4d-d79dbf5d4fbf
+  - provision_time: 1m 6s
     image_size: 1724 Mb
     balena_os_version: 2.21.0+rev1.prod
     body: |-
