--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    provision_time: 1m 10s
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-11-1
+    PS_UUID: ff9e9350-dde2-11e8-94b6-a7f6c6e21a63
+  - provision_time: 1m 10s
     image_size: 1724 Mb
     balena_os_version: 2.21.0+rev1.prod
     body: |-
