--- a/results.yaml
+++ b/results.yaml
@@ -19,6 +19,26 @@ results:
           undefined
     author: null
     timestamp: 2018-11-1
+    PS_UUID: 17590020-dde8-11e8-8fc3-3b34f8799058
+  - provision_time: 1m 8s
+    image_size: 1724 Mb
+    balena_os_version: 2.21.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✖ Update supervisor through the API
+
+
+      # Summary
+      - planned: 1
+      - pass: 0
+      - fail: 1
+
+      # Fails
+      ## Update supervisor through the API
+          ✖ Update supervisor through the API
+          undefined
+    author: null
+    timestamp: 2018-11-1
     PS_UUID: a7a9b120-dde7-11e8-930e-ef09329b4fde
   - provision_time: 1m 6s
     image_size: 1724 Mb
