--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,26 @@
 results:
   -
-    provision_time: 1m 9s
+    provision_time: 1m 6s
+    image_size: 1724 Mb
+    balena_os_version: 2.21.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✖ Update supervisor through the API
+
+
+      # Summary
+      - planned: 1
+      - pass: 0
+      - fail: 1
+
+      # Fails
+      ## Update supervisor through the API
+          ✖ Update supervisor through the API
+          undefined
+    author: null
+    timestamp: 2018-11-1
+    PS_UUID: f96f9cc0-dde9-11e8-a165-b1bb0f734358
+  - provision_time: 1m 9s
     image_size: 1724 Mb
     balena_os_version: 2.21.0+rev1.prod
     body: |-
