--- a/results.yaml
+++ b/results.yaml
@@ -19,6 +19,26 @@ results:
           undefined
     author: null
     timestamp: 2018-11-1
+    PS_UUID: b785b7c0-ddf5-11e8-aa3b-3ba8b93f0e43
+  - provision_time: 1m 7s
+    image_size: 1724 Mb
+    balena_os_version: 2.21.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✖ Update supervisor through the API
+
+
+      # Summary
+      - planned: 1
+      - pass: 0
+      - fail: 1
+
+      # Fails
+      ## Update supervisor through the API
+          ✖ Update supervisor through the API
+          undefined
+    author: null
+    timestamp: 2018-11-1
     PS_UUID: c6e64aa0-ddf4-11e8-b1b1-d3296a4284ff
   - provision_time: 1m 8s
     image_size: 1724 Mb
