--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    provision_time: 1m 21s
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-11-1
+    PS_UUID: 98f70920-ddf6-11e8-b3d8-fb0ffc5c0860
+  - provision_time: 1m 21s
     image_size: 1724 Mb
     balena_os_version: 2.21.0+rev1.prod
     body: |-
