--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    provision_time: 1m 7s
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-11-1
+    PS_UUID: d877adf0-ddf8-11e8-b1fb-9b12f2d9dc84
+  - provision_time: 1m 7s
     image_size: 1724 Mb
     balena_os_version: 2.21.0+rev1.prod
     body: |-
