--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    provision_time: 0m 39s
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-11-1
+    PS_UUID: 2c0f1ab0-ddfa-11e8-8a48-19fcf5dbad16
+  - provision_time: 0m 39s
     image_size: 1724 Mb
     balena_os_version: 2.21.0+rev1.prod
     body: |-
